<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="Item"
        android:icon="@drawable/ic_history_black_24dp"
        app:showAsAction="always"
        android:id="@+id/historyMenuItem"
    />
</menu>